# NITIC-ConbinatorialOptimization

./: .gitignore  AGENTS.md  README.md  index.md  lecture01_intro_optimization.md  lecture02_ga_binary.ipynb  lecture02_ga_tsp.ipynb  lecture02_ga_tsp.md  lecture03_ga_tsp.ipynb  lecture03_ga_tsp_formal.ipynb  lecture04_pso.ipynb  lecture06_de.md  main.py  myst.yml  pyproject.toml  参考文献.md
.github/workflows/: deploy-book.yml
scripts/: gen_lecture05_notebook.py
